# aiselectors

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
aiselectors/: aiselectors.py  page.py  validators.py
docs/: index.md  modules.md
notebooks/: test.ipynb
tests/: test_foo.py  test_html_utils.py
