[tool.poetry]
name = "aiselectors"
version = "0.0.1"
description = "BeautifulSoup extended with prompts to extract data and calls to Playwright to make it fast to write reliable web agents."
authors = ["Dallan Quass <fdallan@gmail.com>"]
repository = "https://github.com/DallanQ/aiselectors"
documentation = "https://DallanQ.github.io/aiselectors/"
readme = "README.md"
packages = [
  {include = "aiselectors"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
playwright = "^1.42.0"
beautifulsoup4 = "^4.12.3"
openai = "^1.17.0"
python-dotenv = "^1.0.1"
lxml = {extras = ["html-clean"], version = "^5.2.1"}
cssify = "^1.1"
cssselect = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
jupyterlab = "^4.1.5"
jupyter = "^1.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["aiselectors"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # too complex
    "C901",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["aiselectors"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
